--- a/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model bebeclick.Models.ExternalLoginConfirmationViewModel
+﻿@model Bebeclick.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
