--- a/bebeclick/Views/Account/ResetPassword.cshtml
+++ b/bebeclick/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model bebeclick.Models.ResetPasswordViewModel
+﻿@model Bebeclick.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
