--- a/bebeclick/Views/Account/ForgotPassword.cshtml
+++ b/bebeclick/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model bebeclick.Models.ForgotPasswordViewModel
+﻿@model Bebeclick.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
