--- a/bebeclick/Views/Home/Index.cshtml
+++ b/bebeclick/Views/Home/Index.cshtml
@@ -1,25 +1,22 @@
-﻿@using Bebeclick.WebClient
+﻿@model Bebeclick.Models.HomeIndexViewModel
 @{
     ViewBag.Title = "Bebeclick";
 }
+@using (Html.BeginForm()) { 
 <div id="__main">
     <div id="__testimonial"><h3>Idea interior</h3><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios.<br />Fernanda Rojas"</p></div>
     <div id="__searchAndRecommend">
         <div id="__search_title">Busca</div>
         <div id="__recommend_title">Recomienda</div>
         <div id="__search">
-            <select id="__state">
-                @foreach(var state in StateEntity.GetAll().Where(m => m.Visible))
-                {
-                    <option value="@state.ID">@state.Name</option>   
-                }
-            </select>
-            <select id="__product"></select>
+            @Html.DropDownList("states", Model.State, "Select a state...", new { id = "__state" })
+            <select id="__products"></select>
             <select id="__service"></select>
         </div>
         <div id="__recommend">
         </div>
     </div>
 </div>
+}
 <div id="__outstanding"></div>
 
