--- a/bebeclick/Content/default.css
+++ b/bebeclick/Content/default.css
@@ -1,9 +1,11 @@
 ﻿html, body {
+    font-family: OpenSans;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
     margin-bottom: 0px;
+    z-index: 0;
 }
 #__membership {
     width: 1195px;
@@ -115,6 +117,8 @@ a:hover.__rbtUpWh {
 input[type=text].search {
     display: block;
     float: left;
+    font-size: 80%;
+    font-style: italic;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
     background-color: #73c7f5;
@@ -136,62 +140,4 @@ input[type=button].search {
     background-position: 2px 2px;
     border: solid 1px #ffffff;
     width: 20px;
-}
-
-#__main {
-    width: 1195px;
-    height: 470px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #cbcbcd;
-    padding-top: 20px;
-}
-#__testimonial {
-    margin-left: 620px;
-    width: 300px;
-    height: 120px;
-}
-#__searchAndRecommend {
-    margin-top: 80px;
-    margin-left: 80px;
-    margin-right: 80px;
-    height: 100px;
-    background-color: #ffffff;
-    opacity: 0.7;
-    border-radius: 5px;
-    padding-left: 25px;
-    padding-top: 10px;
-}
-#__search_title {
-    font-family: OpenSans;
-    font-weight: bold;
-    font-size: 165%;
-    float: left;
-    width: 800px;
-    height: 38px;
-}
-#__search {
-    float: left;
-    width: 800px;
-    height: 38px;
-}
-#__recommend_title {
-    font-family: OpenSans;
-    font-weight: bold;
-    font-size: 165%;
-    float: left;
-    width: 180px;
-    height: 38px;
-}
-#__recommend {
-    float: left;
-    width: 180px;
-    height: 38px;
-}
-#__outstanding {
-    width: 1195px;
-    height: 280px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ffffff;
 }
