--- a/bebeclick/Content/accountLogin.css
+++ b/bebeclick/Content/accountLogin.css
@@ -3,19 +3,90 @@
     border-radius: 10px;
     padding-left: 60px;
     padding-right: 60px;
-    margin-top: 100px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     width: 400px;
 }
 h3{
-    font-family: OpenSans;
+    color: #000000;
+    font-family: Roboto;
     font-weight: bold;
-    font-size: 165%;
+    font-size: 160%;
+}
+#__email{
+    width: 400px;
+}
+#__password{
+    width: 400px;
+}
+#__remember{
+    float: left;
+    width: 140px;
 }
 #__remember_me{
-    float: left;
+    margin-right: 5px;
 }
-#__remember_label{
+#__forgot_password, #__forgot_password:hover, #__forgot_password:visited, #__forgot_password:active{
+    display: block;
+    float: right;
+    margin: .5em 0;
+    width: 200px;
+    color: #000000;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 110%;
+    text-decoration: none;
+}
+#__log_in_button{
+    display:block;
+    float: none;
+    clear: both;
+    margin-bottom: 20px;
+}
+#__register_socialLoginForm{
+    border-top: solid 1px #000000;
+    height: 120px;
+
+}
+#__register_user, #__register_user:hover, #__register_user:visited, #__register_user:active {
+    display: block;
+    margin: .5em .5em 1em auto;
     float: left;
+    color: #000000;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 110%;
+    text-decoration: none;
+}
+#__external_login{
+    display: block;
+    margin: .7em .5em 1em auto;
+    float: left;
+    font-family: 'OpenSans'
+}
+#__socialLoginList {
+    clear: both;
+    float: none;
+    width: 400px;
+}
+#Google{
+    background-image: url(images/google.png);
+    background-repeat: no-repeat;
+    background-color: #357ae8;
+    background-position: 8px 4px;
+    font-size: 90%;
+    color: #ffffff;
+    padding-left: 42px;
+    opacity: 0.8;
+    filter: 80;
+}
+#Facebook {
+    background-image: url(images/facebook.png);
+    background-color: #3b5998;
+    background-position: -8px -4px;
+    background-repeat: no-repeat;
+    color: #ffffff;
+    font-size: 90%;
+    padding-left: 35px;
 }
