--- a/bebeclick/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/bebeclick/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -2,8 +2,6 @@
 @model ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
-<hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0)
@@ -15,16 +13,15 @@
     }
     else
     {
+        <div id="__external_login">or</div>
         using (Html.BeginForm(Model.Action, "Account", new { ReturnUrl = Model.ReturnUrl }))
         {
             @Html.AntiForgeryToken()
-            <div id="socialLoginList">
-                <p>
+            <div id="__socialLoginList">
                 @foreach (AuthenticationDescription p in loginProviders)
                 {
-                    <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                    <button type="submit" class="pure-button" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Login with @p.AuthenticationType</button>
                 }
-                </p>
             </div>
         }
     }
