--- a/bebeclick/Views/Home/Index.cshtml
+++ b/bebeclick/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Bebeclick.Models.HomeIndexViewModel
 
 @{
-    ViewBag.Title = "Bebeclick";
+    ViewBag.Title = @Resources.HomeResources.IndexTitle;
 }
 
 @section AddToHead{
