--- a/bebeclick/Views/Account/Login.cshtml
+++ b/bebeclick/Views/Account/Login.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Bebeclick.Models
+@using Bebeclick.WebClient.Resources
+
 @model LoginViewModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = @Account.LoginTitle;
 }
 
 @section AddToHead{
@@ -15,23 +17,23 @@
     {
         @Html.AntiForgeryToken()
         <fieldset>
-            <h3>Iniciar sesión</h3>
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.LabelFor(m => m.Email)
-            @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", placeholder = "someone@example.com" })
+            <h3>@Account.LoginTitle</h3>
+            @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
             @Html.ValidationMessageFor(m => m.Email, "")
-            @Html.LabelFor(m => m.Password)
-            @Html.PasswordFor(m => m.Password, new { id = "__password", type = "password", placeholder = "Password" })
+            @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", placeholder = Account.EmailPlaceHolder, required = "required" })
+            @Html.LabelFor(m => m.Password, new { @class = "__control_label" })
             @Html.ValidationMessageFor(m => m.Password, "")
+            @Html.PasswordFor(m => m.Password, new { id = "__password", type = "password", placeholder = Account.PasswordPlaceHolder, required = "required" })
             <label id="__remember" for="__remember_me" class="pure-checkbox">
-                <input id="__remember_me" value="remember" type="checkbox" />Remember me
+                <input id="__remember_me" value="remember" type="checkbox" />@Account.RememberMe
+
             </label>
-            @Html.ActionLink("Forgot your password?", "ForgotPassword", null, new { id = "__forgot_password" })
-            <input id="__log_in_button" type="submit" value="Log in" class="pure-button pure-button-primary" />
+            @Html.ActionLink(@Account.ForgotPassword, "ForgotPassword", null, new { id = "__forgot_password" })
+            <input id="__log_in_button" type="submit" value="@Account.LogIn" class="pure-button pure-button-primary" />
         </fieldset>
     }
     <div id="__register_socialLoginForm">
-        @Html.ActionLink("Register as a new user", "Register", "Account", null, new { id = "__register_user" })
+        @Html.ActionLink(@Account.RegisterNewUser, "Register", "Account", null, new { id = "__register_user" })
         @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
     </div>
 </div>
