--- a/bebeclick/Views/Account/Register.cshtml
+++ b/bebeclick/Views/Account/Register.cshtml
@@ -3,38 +3,38 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
+@section AddToHead{
+    <link href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/accountRegister.css")" rel="stylesheet" type="text/css" />
 }
+
+<div id="__register">
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "pure-form pure-form-stacked", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h1>Create a new account</h1>
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <fieldset>
+            @Html.LabelFor(m => m.FirstName, new { @class = "__control_label" })
+            @Html.TextBoxFor(m => m.FirstName, new { id = "__name", required = "required" })
+            @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
+            @Html.TextBoxFor(m => m.Email, new { @class = "__email", required = "required" })
+            @Html.LabelFor(m => m.Password, new { @class = "__control_label" })
+            @Html.PasswordFor(m => m.Password, new { @class = "__password", required = "required" })
+        </fieldset>
+        <fieldset>
+            @Html.LabelFor(m => m.LastName, new { @class = "__control_label" })
+            @Html.TextBoxFor(m => m.LastName, new { id = "__last_name", required = "required" })
+            @Html.LabelFor(m => m.BirthDate, new { @class = "__control_label" })
+            @Html.TextBoxFor(m => m.BirthDate, new { id = "__birth_date", required = "required" })
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "__control_label" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "__confirm_password", required = "required" })
+        </fieldset>
+
+
+        <input type="submit" class="btn btn-default" value="Register" />
+    }
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
