--- a/bebeclick/Views/Account/Login.cshtml
+++ b/bebeclick/Views/Account/Login.cshtml
@@ -19,10 +19,10 @@
         <fieldset>
             <h3>@Account.LoginTitle</h3>
             @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
-            @Html.ValidationMessageFor(m => m.Email, "")
+            @Html.ValidationMessageFor(m => m.Email)
             @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", placeholder = Account.EmailPlaceHolder, required = "required" })
             @Html.LabelFor(m => m.Password, new { @class = "__control_label" })
-            @Html.ValidationMessageFor(m => m.Password, "")
+            @Html.ValidationMessageFor(m => m.Password)
             @Html.PasswordFor(m => m.Password, new { id = "__password", type = "password", placeholder = Account.PasswordPlaceHolder, required = "required" })
             <label id="__remember" for="__remember_me" class="pure-checkbox">
                 <input id="__remember_me" value="remember" type="checkbox" />@Account.RememberMe
