--- a/bebeclick/Content/default.css
+++ b/bebeclick/Content/default.css
@@ -186,3 +186,41 @@ input[type=button].search {
 }
 
 /* Common styles */
+h1.bebeclick{
+    color: #000000;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 300%;
+}
+h2.bebeclick{
+    color: #000000;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 250%;
+}
+h3.bebeclick{
+    color: #000000;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 160%;
+}
+h4.bebeclick{
+    color: #ffffff;
+}
+.__control_label{
+    float: left;
+}
+input[type=text]{
+    clear: both;
+}
+/* error handling */
+.validation_summary{
+    color: #b94a48;
+}
+.field-validation-error {
+    display: block;
+    float: left;
+    color: #c09853;
+    margin: .25em .5em;
+    font-family: 'OpenSans'
+}
