--- a/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,35 +1,59 @@
 ﻿@model Bebeclick.Models.ExternalLoginConfirmationViewModel
+@using Bebeclick.WebClient.Resources
+
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = @Account.ExternalLoginTitle;
 }
-<h2>@ViewBag.Title.</h2>
-<h3>Associate your @ViewBag.LoginProvider account.</h3>
 
-@using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-
-    <h4>Association Form</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <p class="text-info">
-        You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-            Please enter a user name for this site below and click the Register button to finish
-            logging in.
-    </p>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
+@section AddToHead{
+    <link href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/account/externalLogin.css")" rel="stylesheet" type="text/css" />
 }
+
+<div id="__register">
+    @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "pure-form pure-form-stacked", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <fieldset>
+            <h1 class="bebeclick">@Account.ExternalLoginTitle</h1>
+            <h3 class="bebeclick">@string.Format(Account.ExternalLoginSubtitle, ViewBag.LoginProvider)</h3>
+            <p>
+                Has sido autenticado exitósamente con tu cuenta de <strong>@ViewBag.LoginProvider</strong>. En esta comunidad nos basamos en relaciones personales. Ayuda a otros usuarios a conocerte un poco mejor.
+            </p>
+            <div class="left">
+                @Html.LabelFor(m => m.FirstName, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.FirstName)
+                @Html.TextBoxFor(m => m.FirstName, new { id = "__firstName", required = "required" })
+                @Html.LabelFor(m => m.BirthDay, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.BirthDay)
+                @Html.TextBoxFor(m => m.BirthDay, new { id = "__birthDay", required = "required" })
+                @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.Email)
+                @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", required = "required" })
+            </div>
+            <div class="right">
+                @Html.LabelFor(m => m.LastName, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.LastName)
+                @Html.TextBoxFor(m => m.LastName, new { id = "__lastName", required = "required" })
+                @Html.LabelFor(m => m.Gender, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.Gender)
+                @Html.TextBoxFor(m => m.Gender, new { id = "__gender", required = "required" })
+                @Html.LabelFor(m => m.State, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.State)
+                @Html.TextBoxFor(m => m.State, new { id = "__state", required = "required" })
+                @Html.LabelFor(m => m.City, new { @class = "__control_label" })
+                @Html.ValidationMessageFor(m => m.City)
+                @Html.TextBoxFor(m => m.City, new { id = "__city", required = "required" })
+            </div>
+
+
+
+
+            <input id="__register_button" type="submit" value="@Account.Register" class="pure-button pure-button-primary" />
+            @Html.ValidationSummary(true, Account.ExternalLoginValidationSummary, new { @class = "validation_summary" })
+        </fieldset>
+    }
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
