--- a/bebeclick/Views/Home/Index.cshtml
+++ b/bebeclick/Views/Home/Index.cshtml
@@ -5,13 +5,13 @@
 }
 
 @section AddToHead{
-    <link href="@Url.Content("~/Content/homeIndex.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/home/index.css")" rel="stylesheet" type="text/css" />
 }
 
 @using (Html.BeginForm())
 {
     <div id="__main">
-        <div id="__testimonial"><h3>Idea interior</h3><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios".<br />Fernanda Rojas</p></div>
+        <div id="__testimonial"><h4 class="bebeclick">Idea interior</h4><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios".<br />Fernanda Rojas</p></div>
         <div id="__search_recommend">
             <div id="__search_title">@Resources.General.SearchTitle</div>
             <div id="__recommend_title">@Resources.General.RecommendTitle</div>
