--- a/bebeclick/Content/default.css
+++ b/bebeclick/Content/default.css
@@ -210,7 +210,7 @@ h4.bebeclick{
 .__control_label{
     float: left;
 }
-input[type=text], input[type=email]{
+input[type=text], input[type=email], input[type=date]{
     clear: both;
 }
 /* error handling */
