--- a/bebeclick/Content/account/login.css
+++ b/bebeclick/Content/account/login.css
@@ -1,4 +1,6 @@
-﻿#__log_in {
+﻿@import url("http://yui.yahooapis.com/pure/0.4.2/pure-min.css");
+
+#__log_in {
     background-color: #f0f0f0;
     border-radius: 10px;
     padding-left: 60px;
