--- a/bebeclick/Content/account/register.css
+++ b/bebeclick/Content/account/register.css
@@ -1,4 +1,6 @@
-﻿#__register {
+﻿@import url("http://yui.yahooapis.com/pure/0.4.2/pure-min.css");
+
+#__register {
     background-color: #f0f0f0;
     border-radius: 10px;
     padding-left: 60px;
