--- a/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Bebeclick.Models.ExternalLoginConfirmationViewModel
+@using System.Globalization
 @using Bebeclick.WebClient.Resources
 
 @{
@@ -6,53 +7,58 @@
 }
 
 @section AddToHead{
-    <link href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/account/externalLogin.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Scripts/jquery-ui-1.10.4.min.js")" rel="stylesheet" type="text/javascript" />
 }
 
-<div id="__register">
-    @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "pure-form pure-form-stacked", role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        <fieldset>
-            <h1 class="bebeclick">@Account.ExternalLoginTitle</h1>
-            <h3 class="bebeclick">@string.Format(Account.ExternalLoginSubtitle, ViewBag.LoginProvider)</h3>
-            <p>
-                Has sido autenticado exitósamente con tu cuenta de <strong>@ViewBag.LoginProvider</strong>. En esta comunidad nos basamos en relaciones personales. Ayuda a otros usuarios a conocerte un poco mejor.
-            </p>
-            <div class="left">
-                @Html.LabelFor(m => m.FirstName, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.FirstName)
-                @Html.TextBoxFor(m => m.FirstName, new { id = "__firstName", required = "required" })
-                @Html.LabelFor(m => m.BirthDay, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.BirthDay)
-                @Html.TextBox("BirthDay", String.Format("{0:d}", Model.BirthDay.ToShortDateString()), new { id = "__birthDay", type = "date", required = "required" })
-                @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.Email)
-                @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", required = "required" })
-            </div>
-            <div class="right">
-                @Html.LabelFor(m => m.LastName, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.LastName)
-                @Html.TextBoxFor(m => m.LastName, new { id = "__lastName", required = "required" })
-                @Html.LabelFor(m => m.Gender, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.Gender)
-                @Html.TextBoxFor(m => m.Gender, new { id = "__gender", required = "required" })
-                @Html.LabelFor(m => m.State, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.State)
-                @Html.TextBoxFor(m => m.State, new { id = "__state", required = "required" })
-                @Html.LabelFor(m => m.City, new { @class = "__control_label" })
-                @Html.ValidationMessageFor(m => m.City)
-                @Html.TextBoxFor(m => m.City, new { id = "__city", required = "required" })
-            </div>
-            <input id="__register_button" type="submit" value="@Account.Register" class="pure-button pure-button-primary" />
-            @Html.ValidationSummary(true, Account.ExternalLoginValidationSummary, new { @class = "validation_summary" })
-        </fieldset>
-    }
-</div>
+    <div id="__register">
+        @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "pure-form pure-form-stacked", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <fieldset>
+                <h1 class="bebeclick">@Account.ExternalLoginTitle</h1>
+                <h3 class="bebeclick">@string.Format(Account.ExternalLoginSubtitle, ViewBag.LoginProvider)</h3>
+                <p>
+                    Has sido autenticado exitósamente con tu cuenta de <strong>@ViewBag.LoginProvider</strong>. En esta comunidad nos basamos en relaciones personales. Ayuda a otros usuarios a conocerte un poco mejor.
+                </p>
+                <div class="left">
+                    @Html.LabelFor(m => m.FirstName, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.FirstName)
+                    @Html.TextBoxFor(m => m.FirstName, new { id = "__firstName", required = "required" })
+                    @Html.LabelFor(m => m.BirthDay, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.BirthDay)
+                    @Html.TextBox("BirthDay", String.Format("{0:d}", Model.BirthDay.ToShortDateString()), new { id = "__birthDay", type = "date", required = "required" })
+                    @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.Email)
+                    @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", required = "required" })
+                </div>
+                <div class="right">
+                    @Html.LabelFor(m => m.LastName, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.LastName)
+                    @Html.TextBoxFor(m => m.LastName, new { id = "__lastName", required = "required" })
+                    @Html.LabelFor(m => m.Gender, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.Gender)
+                    @Html.TextBoxFor(m => m.Gender, new { id = "__gender", required = "required" })
+                    @Html.LabelFor(m => m.State, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.State)
+                    @Html.TextBoxFor(m => m.State, new { id = "__state", required = "required" })
+                    @Html.LabelFor(m => m.City, new { @class = "__control_label" })
+                    @Html.ValidationMessageFor(m => m.City)
+                    @Html.TextBoxFor(m => m.City, new { id = "__city", required = "required" })
+                </div>
+                <input id="__register_button" type="submit" value="@Account.Register" class="pure-button pure-button-primary" />
+                @Html.ValidationSummary(true, Account.ExternalLoginValidationSummary, new { @class = "validation_summary" })
+            </fieldset>
+        }
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jqueryUI")
+    @Scripts.Render("~/Scripts/Account/externalLoginConfirmation.js")
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#__birthDay').datepicker($.datepicker.regional["@CultureInfo.CurrentUICulture.TwoLetterISOLanguageName"]);
+        });
+    </script>
 }
+
