--- a/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Bebeclick.Models.ExternalLoginConfirmationViewModel
 @using System.Globalization
 @using Bebeclick.WebClient.Resources
+@using System.Linq;
 
 @{
     ViewBag.Title = @Account.ExternalLoginTitle;
@@ -26,7 +27,7 @@
                     @Html.TextBoxFor(m => m.FirstName, new { id = "__firstName", required = "required" })
                     @Html.LabelFor(m => m.BirthDay, new { @class = "__control_label" })
                     @Html.ValidationMessageFor(m => m.BirthDay)
-                    @Html.TextBox("BirthDay", String.Format("{0:d}", Model.BirthDay.ToShortDateString()), new { id = "__birthDay", type = "date", required = "required" })
+                    @Html.TextBoxFor(m => m.BirthDay, String.Format("{0:d}", Model.BirthDay.ToShortDateString()), new { id = "__birthDay", type = "date", required = "required" })
                     @Html.LabelFor(m => m.Email, new { @class = "__control_label" })
                     @Html.ValidationMessageFor(m => m.Email)
                     @Html.TextBoxFor(m => m.Email, new { id = "__email", type = "email", required = "required" })
@@ -37,13 +38,13 @@
                     @Html.TextBoxFor(m => m.LastName, new { id = "__lastName", required = "required" })
                     @Html.LabelFor(m => m.Gender, new { @class = "__control_label" })
                     @Html.ValidationMessageFor(m => m.Gender)
-                    @Html.TextBoxFor(m => m.Gender, new { id = "__gender", required = "required" })
+                    @Html.DropDownListFor(m => m.Gender, Model.Genders, new { id = "__gender", required = "required" })
                     @Html.LabelFor(m => m.State, new { @class = "__control_label" })
                     @Html.ValidationMessageFor(m => m.State)
-                    @Html.TextBoxFor(m => m.State, new { id = "__state", required = "required" })
+                    @Html.DropDownListFor(m => m.State, Model.States, Account.StateSelect, new { id = "__state", required = "required" })
                     @Html.LabelFor(m => m.City, new { @class = "__control_label" })
                     @Html.ValidationMessageFor(m => m.City)
-                    @Html.TextBoxFor(m => m.City, new { id = "__city", required = "required" })
+                    @Html.DropDownListFor(m => m.City, Enumerable.Empty<SelectListItem>(), Account.CitySelect, new { id = "__city", required = "required" })
                 </div>
                 <input id="__register_button" type="submit" value="@Account.Register" class="pure-button pure-button-primary" />
                 @Html.ValidationSummary(true, Account.ExternalLoginValidationSummary, new { @class = "validation_summary" })
@@ -55,10 +56,33 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jqueryUI")
     @Scripts.Render("~/Scripts/Account/externalLoginConfirmation.js")
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#__birthDay').datepicker($.datepicker.regional["@CultureInfo.CurrentUICulture.TwoLetterISOLanguageName"]);
-        });
-    </script>
+    @if (CultureInfo.CurrentUICulture.TwoLetterISOLanguageName == "es") { 
+        <script type="text/javascript">
+            /* localizing calendar content to spanish language */
+            $(document).ready(function () {
+                $('#__birthDay').datepicker($.datepicker.regional["@CultureInfo.CurrentUICulture.TwoLetterISOLanguageName"]);
+
+                $('#__state').change(function () {
+                    var selectedState = $(this).val();
+                    if (selectedState != null && selectedState != '00000000-0000-0000-0000-000000000000') {
+                        $.getJSON('@Url.Action("GetCities")', { stateId: selectedState }, function (cities) {
+                            var citiesSelect = $('#__city');
+                            citiesSelect.empty();
+                            citiesSelect.append($('<option/>', {
+                                value: '00000000-0000-0000-0000-000000000000',
+                                text: '@Account.CitySelect'
+                            }));
+                            $.each(cities, function (index, city) {
+                                citiesSelect.append($('<option/>', {
+                                    value : city.value,
+                                    text: city.text
+                                })); 
+                            });
+                        });
+                    }
+                });
+            });
+        </script>
+    }
 }
 
