Including render action for facebook

--- a/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/bebeclick/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,7 +1,10 @@
-﻿@model Bebeclick.Models.ExternalLoginConfirmationViewModel
-@using System.Globalization
+﻿@using Bebeclick.Models
 @using Bebeclick.WebClient.Resources
+@using System.Globalization
 @using System.Linq;
+
+
+@model ExternalLoginConfirmationViewModel
 
 @{
     ViewBag.Title = @Account.ExternalLoginTitle;
